# pcf-toolkit

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  github-release.yml  pages-deploy.yml  typecheck-scripts.yml  uv-lock-update.yml
data/: schema_snapshot.json
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html  robots.txt  sitemap.xml  sw.js
docs/advanced/: best-practices.md  faq.md  performance.md  security.md  troubleshooting.md
docs/api/: python.md
docs/assets/css/: theme.css
docs/assets/js/: docsify-plugins.js
docs/cli/: commands.md  overview.md
docs/guide/: architecture.md  first-proxy.md  getting-started.md  installation.md  quickstart.md
docs/integrations/: ci-cd.md  editor.md  pac-cli.md
docs/manifest/: control.md  datasets.md  dependencies.md  events.md  external-services.md  feature-usage.md  full-example.md  overview.md  platform-action.md  properties.md  property-dependencies.md  property-sets.md  resources.md  type-groups.md
docs/meta/: accessibility.md  glossary.md  keyboard-shortcuts.md
docs/project/: changelog.md  contributing.md  license.md  releasing.md  roadmap.md
docs/proxy/: configuration.md  doctor.md  overview.md  troubleshooting.md  workflow.md
examples/configs/: pcf-proxy.json  pcf-proxy.yaml
examples/manifests/: manifest.json  manifest.yaml
schemas/: pcf-proxy.schema.json
scripts/: build_json_schema.py  build_schema_snapshot.py  bump_version.py  bump_version_post_commit.sh  extract_spec.py
scripts/release/: auto_release.py
src/pcf_manifest_toolkit/: __init__.py  cli.py  cli_helpers.py  io.py  json_schema.py  models.py  rich_help.py  schema_snapshot.py  xml.py  xml_import.py
src/pcf_manifest_toolkit/data/: manifest.schema.json
src/pcf_toolkit/: __init__.py  cli.py  cli_helpers.py  io.py  json_schema.py  models.py  rich_help.py  schema_snapshot.py  types.py  xml.py  xml_import.py
src/pcf_toolkit/data/: __init__.py  schema_snapshot.json  spec_raw.json
src/pcf_toolkit/proxy/: __init__.py  browser.py  cli.py  config.py  doctor.py  mitm.py  server.py
src/pcf_toolkit/proxy/addons/: __init__.py  redirect_bundle.py
tests/: test_cli_helpers.py  test_cli_internal.py  test_cli_tools.py  test_examples.py  test_import_xml.py  test_io.py  test_models_validation.py  test_proxy_cli.py  test_schema_snapshot.py  test_xml_import_full.py  test_xml_serialize_full.py
