[project]
name = "pcf-toolkit"
version = "0.2.6"
description = "PCF toolkit CLI for manifest authoring and local proxy development."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Vectorfy Co - Andrew M", email = "contact@vectorfy.co" }]
license = {file = "LICENSE.md"}
keywords = [
  "pcf",
  "power-apps",
  "power-platform",
  "manifest",
  "xml",
  "yaml",
  "proxy",
  "toolkit",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "pyyaml>=6.0",
  "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=5.0",
  "playwright>=1.40",
  "ruff>=0.6",
  "gitpython>=3.1.46",
  "pydantic-settings>=2.12.0",
  "tomlkit>=0.14.0",
  "rich>=14.2.0",
  "packaging>=25.0",
]
proxy = [
  "mitmproxy>=10.0",
]

[project.scripts]
pcf-toolkit = "pcf_toolkit.cli:app"

[project.urls]
homepage = "https://docs.pcf-toolkit.vectorfy.co"
repository = "https://github.com/vectorfy-co/pcf-toolkit"
issues = "https://github.com/vectorfy-co/pcf-toolkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pcf_toolkit.data" = ["*.json"]
"pcf_toolkit" = ["py.typed"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP036"]
